# Computer-Graphics-OpenGL

./: CMakeLists.txt
01_Introduction/: 01_Introduction.pro  CMakeLists.txt
01_Introduction/include/: glwidget.h
01_Introduction/src/: main.cpp
02_VBO/: CMakeLists.txt
02_VBO/forms/: window.ui
02_VBO/src/: glwidget.cpp  main.cpp
03_Transformation/: CMakeLists.txt
03_Transformation/forms/: window.ui
03_Transformation/include/: glwidget.h
03_Transformation/src/: algebra3.cpp  glwidget.cpp  main.cpp
04_Hierachical_Transformation/: CMakeLists.txt
04_Hierachical_Transformation/forms/: window.ui
04_Hierachical_Transformation/include/: glwidget.h
04_Hierachical_Transformation/src/: glwidget.cpp  main.cpp
05_Space_Transformation_Pipeline/: CMakeLists.txt
05_Space_Transformation_Pipeline/forms/: window.ui
05_Space_Transformation_Pipeline/include/: glwidget.h
05_Space_Transformation_Pipeline/src/: glwidget.cpp  main.cpp
06_Illumination_Gouraud_Shading_and_Transform_Normal/: CMakeLists.txt
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex01_Ambient/: CMakeLists.txt
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex01_Ambient/forms/: window.ui
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex01_Ambient/include/: glwidget.h
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex01_Ambient/src/: glwidget.cpp  main.cpp  window.cpp
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex02_Ambient_and_Diffuse/: CMakeLists.txt
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex02_Ambient_and_Diffuse/forms/: window.ui
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex02_Ambient_and_Diffuse/include/: glwidget.h
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex02_Ambient_and_Diffuse/src/: glwidget.cpp  main.cpp
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex03_Gouraud_Shading/: CMakeLists.txt
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex03_Gouraud_Shading/forms/: window.ui
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex03_Gouraud_Shading/include/: glwidget.h
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex03_Gouraud_Shading/src/: glwidget.cpp  main.cpp
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex04_Transform_Normal/: CMakeLists.txt
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex04_Transform_Normal/forms/: window.ui
06_Illumination_Gouraud_Shading_and_Transform_Normal/06_Ex04_Transform_Normal/src/: glwidget.cpp  main.cpp
07_ElementArray_LoadExternalModel/: CMakeLists.txt
07_ElementArray_LoadExternalModel/07_Ex01_ElementArray/: CMakeLists.txt
07_ElementArray_LoadExternalModel/07_Ex01_ElementArray/forms/: window.ui
07_ElementArray_LoadExternalModel/07_Ex01_ElementArray/include/: glwidget.h
07_ElementArray_LoadExternalModel/07_Ex01_ElementArray/src/: glwidget.cpp  main.cpp
07_ElementArray_LoadExternalModel/07_Ex02_LoadExternalModel/: CMakeLists.txt
07_ElementArray_LoadExternalModel/07_Ex02_LoadExternalModel/forms/: window.ui
07_ElementArray_LoadExternalModel/07_Ex02_LoadExternalModel/include/: glwidget.h  objloader.h
07_ElementArray_LoadExternalModel/07_Ex02_LoadExternalModel/src/: glwidget.cpp  main.cpp
07_ElementArray_LoadExternalModel/07_Ex03_LoadModel_with_MultiplePieces/: CMakeLists.txt
07_ElementArray_LoadExternalModel/07_Ex03_LoadModel_with_MultiplePieces/forms/: window.ui
07_ElementArray_LoadExternalModel/07_Ex03_LoadModel_with_MultiplePieces/include/: glwidget.h
07_ElementArray_LoadExternalModel/07_Ex03_LoadModel_with_MultiplePieces/src/: glwidget.cpp  main.cpp  objloader.cpp
Quiz/: CMakeLists.txt
Quiz/Quiz_01/: CMakeLists.txt
Quiz/Quiz_01/forms/: window.ui
Quiz/Quiz_01_MouseEvent/: CMakeLists.txt
Quiz/Quiz_01_MouseEvent/include/: glwidget.h
Quiz/Quiz_01_MouseEvent/src/: glwidget.cpp  main.cpp
Quiz/Quiz_02/: CMakeLists.txt
Quiz/Quiz_02/forms/: window.ui
Quiz/Quiz_02/src/: glwidget.cpp  main.cpp
Quiz/Quiz_02_Draw_Rectangle/: CMakeLists.txt
Quiz/Quiz_02_Draw_Rectangle/include/: glwidget.h
Quiz/Quiz_02_Draw_Rectangle/src/: window.cpp
Quiz/Quiz_03/: CMakeLists.txt
Quiz/Quiz_03/include/: glwidget.h
Quiz/Quiz_03/src/: glwidget.cpp  main.cpp
Quiz/Quiz_03_Transformation_Animation/: CMakeLists.txt  Lab03Demo.mov
Quiz/Quiz_03_Transformation_Animation/forms/: window.ui
Quiz/Quiz_03_Transformation_Animation/include/: algebra3.h  glwidget.h
Quiz/Quiz_03_Transformation_Animation/src/: glwidget.cpp
Quiz/Quiz_04_Robot_Joint_Rotation/: CMakeLists.txt
Quiz/Quiz_04_Robot_Joint_Rotation/forms/: window.ui
Quiz/Quiz_04_Robot_Joint_Rotation/include/: glwidget.h
Quiz/Quiz_04_Robot_Joint_Rotation/src/: glwidget.cpp  main.cpp  window.cpp
Quiz/Quiz_05_Mutiple_Viewport_with_Space_Transformations/: CMakeLists.txt
Quiz/Quiz_05_Mutiple_Viewport_with_Space_Transformations/forms/: window.ui
Quiz/Quiz_05_Mutiple_Viewport_with_Space_Transformations/include/: glwidget.h
Quiz/Quiz_05_Mutiple_Viewport_with_Space_Transformations/src/: glwidget.cpp  main.cpp
Quiz/Quiz_06_Implement_Phong_Shading/: CMakeLists.txt
Quiz/Quiz_06_Implement_Phong_Shading/forms/: window.ui
Quiz/Quiz_06_Implement_Phong_Shading/include/: glwidget.h
Quiz/Quiz_06_Implement_Phong_Shading/requirements/: Lab06-Demo.mov
Quiz/Quiz_06_Implement_Phong_Shading/src/: glwidget.cpp  main.cpp
Tutorial/01_Introduction/SampleCode/: CMakeLists.txt
Tutorial/01_Introduction/SampleCode/forms/: window.ui
Tutorial/01_Introduction/SampleCode/src/: glwidget.cpp
